platform/observability-hub/thanos/ingress-receive-router.yaml
apiVersion: route.openshift.io/v1
kind: Route 
metadata:
  name: thanos-receive-router
  namespace: monitoring                 
spec:  
  host:
  tls:
    termination: edge
  to:
    kind: Service
    name: thanos-receive-router
    weight: 100
  wildcardPolicy: None
