platform/observability-hub/thanos/ingress-ruler.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: thanos-ruler
  namespace: monitoring
spec:
  host:
  path: /
  to:
    kind: Service
    name: thanos-ruler
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
  wildcardPolicy: None
